todo: alist检查更新、代理测试